--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/pedidos.css">
+
+    <meta name="description" content="cafeteria & pasteleria">
+    <meta name="keywords" content="Cafetería, Pastelería, Café, PáginaWeb, merienda">
+
+    <meta name="robots" content="index">
+    <meta name="robots" content="folow">
+
+    <meta property="og:title" content="Valemde">
+    <meta property="og:description" content="Cafetería & Patelería">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/logo valmendeeee.png">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Pedidos</title>
 </head>
 
@@ -13,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-subtle">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="../index.html">
             <img src="../images/logo valmendeeee.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
             Valemde
             </a>
@@ -34,12 +47,12 @@
         </div>
     </nav>
     
-    <main class="container">
-        <div class="card card1">
+    <main class="pedidos-main-container">
+        <div class="pedidos-main-card pedidos-main-card1">
             <div>
                 <p>¡Aceptamos pedidos para todo tipo de eventos! Cumpleaños, fiestas y más. Reserva con 48hs de anticipación.</p>
             </div>
-            <div class="card2">
+            <div class="pedidos-main-card2">
                 <h2>
                     Catálogo:
                 </h2>
@@ -60,43 +73,43 @@
             </div>
             
         </div>
-        <div class="carruzel card">
+        <div class="pedidos-main-carrusel pedidos-main-card">
             <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="2000">
-                     <img src="../images/medialunas.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-item active pedidos-carrusel" data-bs-interval="2000">
+                        <img src="../images/medialunas (1).jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                     <img src="../images/torta red.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
+                        <img src="../images/torta red.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/torta matilda.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/boxdesayuno2.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/torta oreo.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/chocotorta.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/kye lime pie.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/box desayuno1.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/lingote brownie.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/lemon pie.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/tarta frutilla.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item pedidos-carrusel" data-bs-interval="2000">
                         <img src="../images/chesse cake.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
