--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css//productos.css">
+
+    <meta name="description" content="cafeteria & pasteleria">
+    <meta name="keywords" content="Cafetería, Pastelería, Café, PáginaWeb, merienda">
+
+    <meta name="robots" content="index">
+    <meta name="robots" content="folow">
+
+    <meta property="og:title" content="Valemde">
+    <meta property="og:description" content="Cafetería & Patelería">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/logo valmendeeee.png">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Productos</title>
-</head>
+</head> 
 
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-subtle">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="../index.html">
             <img src="../images/logo valmendeeee.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
             Valemde
             </a>
@@ -34,44 +47,47 @@
         </div>
     </nav>
     
-    <main class="container-main-productos">
-        <div class="carruzel card">
+    <main class="productos-container-main">
+        <div class="productos-main-carrusel productos-main-card">
             <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="2000">
-                     <img src="../images/medialunas.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-item active productos-carrusel" data-bs-interval="2000">
+                     <img src="../images/medialunas (1).jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                      <img src="../images/cookies.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/porcion red.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/porcion matilda.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
+                        <img src="../images/toston (1).jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/oreocookie.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="../images/chipa.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
+                        <img src="../images/tostadodechipa (1).jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
                         <img src="../images/chips.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/mocca.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/coissantddl.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/capucccino.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/rocklets.jpeg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item productos-carrusel" data-bs-interval="2000">
                         <img src="../images/pistacho.jpeg" class="d-block w-100" alt="...">
                     </div>
                 </div>
@@ -85,7 +101,7 @@
                 </button>
             </div>
         </div>
-        <div class="card card1">
+        <div class="productos-main-card productos-main-card1">
             <div>
                 <p>En Valemde cada producto está hecho a mano, con amor por los detalles y pasión por lo artesanal. </p>
             </div>
