--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-subtle">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="./index.html">
-            <img src="../images/logo valmendeeee.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+            <img src="./images/logo valmendeeee.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
             Valemde
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
