--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -47,7 +47,7 @@
     
     <h1 class="ubicacion-h1">Dónde encontrarnos...</h1>
     <main >
-        <div class="ubicaion-main-container">
+        <div class="ubicacion-main-container">
             <div class="ubicacion-card ubicacion-card-1">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d688.7871071348306!2d-58.35570539609945!3d-34.79481733016924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d72f35592d7%3A0x4656f66127f91d9d!2sValemde%20%22La%20tienda%20del%20dulce%22!5e0!3m2!1ses-419!2sar!4v1743883552601!5m2!1ses-419!2sar" width="400" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <p class="ubicacion-card-1-calle">📍Int. Martín González 1780</p>
